force-app/main/default/objects/Idol_Group__c/Idol_Group__c.object-meta.xml
<CustomObject>
    <label>Idol Group</label>
    <nameField>
        <label>Idol Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idol Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>