force-app/main/default/objects/Idol_Group__c/fields/Dancer__c.field-meta.xml
<CustomField>
    <fullName>Dancer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main dance talent of the group</description>
    <label>Dancer</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Dancer)</relationshipLabel>
    <relationshipName>Idol_Group</relationshipName>
    <type>Lookup</type>
</CustomField>