force-app/main/default/objects/Idol_Group__c/fields/Debut_Status__c.field-meta.xml
<CustomField>
    <fullName>Debut_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this group made their debut yet?</description>
    <label>Debut Status</label>
    <type>Checkbox</type>
</CustomField>