force-app/main/default/objects/Idol_Group__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <description>The group&apos;s leading member</description>
    <label>Lead</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Idol)</relationshipLabel>
    <relationshipName>Idol_Management</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>