force-app/main/default/objects/Idol_Group__c/fields/Multi_Role2__c.field-meta.xml
<CustomField>
    <fullName>Multi_Role2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An idol with many talents</description>
    <label>Multi-Role2</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Multi-Role2)</relationshipLabel>
    <relationshipName>Idol_Groups3</relationshipName>
    <type>Lookup</type>
</CustomField>