force-app/main/default/objects/Idol_Group__c/fields/Multi_Role__c.field-meta.xml
<CustomField>
    <fullName>Multi_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A member of the group who&apos;s versatile</description>
    <label>Multi-Role</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Multi-Role)</relationshipLabel>
    <relationshipName>Idol_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>