force-app/main/default/objects/Idol_Group__c/fields/Notes_on_Group__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Group__c</fullName>
    <description>An area for notes to be taken regarding the group&apos;s overall state</description>
    <label>Notes on Group</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>