force-app/main/default/objects/Idol_Group__c/fields/Rapper__c.field-meta.xml
<CustomField>
    <fullName>Rapper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group&apos;s main rapper</description>
    <label>Rapper</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Rapper)</relationshipLabel>
    <relationshipName>Idol_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>