force-app/main/default/objects/Idol_Group__c/fields/Vocals__c.field-meta.xml
<CustomField>
    <fullName>Vocals__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The main vocal talent of the group</description>
    <label>Vocals</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipLabel>Idol Groups (Idol_2)</relationshipLabel>
    <relationshipName>Idol_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>